--- a/C++/leetcode/.vscode/settings.json
+++ b/C++/leetcode/.vscode/settings.json
@@ -1,7 +1,5 @@
 {
     "files.associations": {
-        "format": "cpp",
-        "vector": "cpp",
         "array": "cpp",
         "atomic": "cpp",
         "bit": "cpp",
@@ -21,6 +19,7 @@
         "deque": "cpp",
         "string": "cpp",
         "unordered_map": "cpp",
+        "vector": "cpp",
         "exception": "cpp",
         "algorithm": "cpp",
         "functional": "cpp",
@@ -35,6 +34,7 @@
         "tuple": "cpp",
         "type_traits": "cpp",
         "utility": "cpp",
+        "format": "cpp",
         "initializer_list": "cpp",
         "iosfwd": "cpp",
         "iostream": "cpp",
@@ -44,11 +44,11 @@
         "numbers": "cpp",
         "ostream": "cpp",
         "span": "cpp",
+        "sstream": "cpp",
         "stdexcept": "cpp",
         "streambuf": "cpp",
         "text_encoding": "cpp",
         "typeinfo": "cpp",
-        "variant": "cpp",
-        "sstream": "cpp"
+        "variant": "cpp"
     }
 }
